--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Company Information
-company_name: Johns, Smith & Associates
-address_line: Via Ludovisi 39-45, Rome, 54267, Italy
-telephone_number: 1.800.245.356
-fax_number: 1.800.245.357
-company_email: hello@LawOffice.org
+company_name: Papelería Trébol
+address_line: AVENIDA LOS PINOS MZ 3 LT 37, ROSA DE CASTILLA NUEVA,LOS REYES ACAQUILPAN, 56512 Ciudad de México, Méx.
+telephone_number: 56 1931 4399
+fax_number: 
+company_email: paptrébol2019@gmail.com
 google_map: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30112.74315008853!2d-98.91040319999999!3d19.365130000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e1a95fc710c5%3A0x66e5e25ff9e5c143!2zUEFQRUxFUsONQSBUUsOJQk9M!5e0!3m2!1ses-419!2smx!4v1683498489075!5m2!1ses-419!2smx
 #google_map: https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3618.727010735933!2d91.837871!3d24.907291700000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1404919738144
 #<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30112.74315008853!2d-98.91040319999999!3d19.365130000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e1a95fc710c5%3A0x66e5e25ff9e5c143!2zUEFQRUxFUsONQSBUUsOJQk9M!5e0!3m2!1ses-419!2smx!4v1683498489075!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
