--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ google_map: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30112.74315008
 # Social Link
 facebook_link: http://www.facebook.com
 twitter_link: http://www.twitter.com
-linkedin_link: http://www.linkedin.com
-googleplus_link: http://plus.google.com
+linkedin_link: <paptrebol2019@gmail.com>
+googleplus_link: https://goo.gl/maps/EbSf9jKxHHqW91sY9
 
 # Build settings
 markdown: kramdown
