--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ google_map: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30112.74315008
 # Social Link
 facebook_link: http://www.facebook.com
 twitter_link: http://www.twitter.com
-linkedin_link: paptrebol2019@gmail.com
+linkedin_link: https://contacts.google.com/person/c8136865885916047040
 googleplus_link: https://goo.gl/maps/EbSf9jKxHHqW91sY9
 
 # Build settings
